dspaces/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose-resolved.yml convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose-resolved.yml convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: api
    spec:
      containers:
        - name: dspaces-api
          image: yutianqin/dspaces-api:v2
          workingDir: /app
          ports:
            - containerPort: 8001
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

      restartPolicy: Always
