dspaces/dspaces-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dspaces-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dspaces-server
  template:
    metadata:
      labels:
        app: dspaces-server
    spec:
      containers:
        - name: dspaces-server
          image: philipdavis/dspaces-server:v01082024
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /dspaces.toml
              name: dspaces-cm
              subPath: dspaces.toml
            - mountPath: /dspaces_reg.db
              name: db-volume
              subPath: dspaces_reg.db

      # Create database file before starting the server
      # Mount the db file to shared volume
      volumes:
        - name: dspaces-cm
          configMap:
            name: dspaces-cm
        - name: db-volume
          emptyDir: {}
      restartPolicy: Always
